# raytracing

./: README.md
cpp/: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  build-native.sh  build.sh  cmake_install.cmake  format.sh
cpp/assets/: index.html
cpp/demos/: flower.cpp
cpp/src/: Aabb.h  Camera.hpp  Color.hpp  FlowField.h  HitRecord.hpp  Main.cpp  Material.cpp  Material.hpp  Mover.h  PerlinNoise.h  Point3.hpp  Ray.hpp  Sphere.hpp  Utils.hpp  Vec2.h  Vec3.hpp  Vehicle.h  Walker.cpp  World.hpp
elixir_rt/: .gitignore  README.md  mix.exs
elixir_rt/lib/: color.ex  elixir_rt.ex  ray.ex  vec3.ex
elixir_rt/test/: color_test.exs  elixir_rt_test.exs  ray_test.exs  vec3_test.exs
nim/: .gitignore  config.nims  helloworld.ppm  tracer.nimble
nim/images/: 10.2.ppm  10.3.ppm  10.4.ppm  11.2.1.ppm  11.2.2.ppm  11.2.ppm  13.1.ppm  8.4.ppm  8.6.ppm  9.5.ppm  9.6.ppm  helloworld-8.5.ppm  multithreaded.ppm
nim/src/: camera.nim  color.nim  hit_record.nim  hittable.nim  immutable_seq_error_msg.nim  main.nim  material.nim  point3.nim  ray.nim  raytracer.nim  sphere.nim  tracer.nim  utils.nim  vec3.nim  world.nim
ocaml/: .gitignore  dune-project  raytracer.opam
ocaml/lib/: camera.ml  camera.mli  color.ml  color.mli  hit_record.ml  hit_record.mli  material.ml  material.mli  point.ml  point.mli  ray.ml  ray.mli  ray_physics.ml  ray_physics.mli  sphere.ml  sphere.mli  utils.ml  utils.mli  vec3.ml  vec3.mli  world.ml  world.mli
ocaml/test/: dune  raytracer.ml
rust/: Cargo.toml  helloworld.ppm
rust/images/: 10.2.ppm  10.3.ppm  10.4.ppm  10.5.ppm  8.5.ppm  8.6.ppm  9.4.ppm  9.5.ppm  9.6.ppm  hovering-centre-bubble.ppm
rust/src/: camera.rs  color.rs  hit_record.rs  main.rs  material.rs  ray.rs  sphere.rs  utils.rs  vec3.rs  world.rs
zig/src/: main.zig  point3.zig  ray.zig  vec3.zig
